# amqp_topic_transceiver

./: .ci_dependencies.yaml  .gitlab-ci.yml  README.md
ros/: CMakeLists.txt  package.xml
ros/config/: AMQPTopicReceiver_config.cfg  AMQPTopicTransmitter_config.cfg
ros/include/amqp_topic_transceiver/: AMQPTopicReceiver.h  AMQPTopicTransmitter.h  utils.h
ros/launch/: test.launch  test_mec.launch  test_parallel_listeners.launch
ros/src/: AMQPTopicReceiver.cpp  AMQPTopicReceiver_node.cpp  AMQPTopicTransmitter.cpp  AMQPTopicTransmitter_node.cpp  utils.cpp
ros2/: CMakeLists.txt  package.xml
ros2/include/amqp_topic_transceiver/: AMQPTopicReceiver.h  AMQPTopicTransceiver.h  AMQPTopicTransmitter.h
ros2/launch/: test.launch.py  transceiver.py
ros2/src/: AMQPTopicReceiver.cpp  AMQPTopicReceiver_node.cpp  AMQPTopicTransceiver.cpp  AMQPTopicTransceiver_node.cpp  AMQPTopicTransmitter.cpp  AMQPTopicTransmitter_node.cpp
