<?xml version="1.0"?>
<package format="3">
  <name>amqp_topic_transceiver</name>
  <version>0.0.0</version>
  <description>amqp_topic_transceiver</description>
  <author>Jan Strohbeck</author>
  <maintainer email="jan.strohbeck@uni-ulm.de">Jan Strohbeck</maintainer>
  <license>Proprietary, (c) 2018 Ulm University, Institute of Measurement, Control and Microtechnology</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <depend>ament_cmake_auto</depend>
  <depend>aduulm_logger</depend>
  <depend>v2x_etsi_asn1_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
